@@ -1,10 +1,14 @@
+Sat Jan 26 21:26:48 CET 2013
+	Fixing regression introduced Jan 6 (test on data_size instead
+	of total_size. -CG
+
 Fri Jan 11 23:21:55 CET 2013
 	Also return MHD_YES from MHD_destroy_post_processor if
 	we did not get '\r\n' in the upload. -CG
 
 Sun Jan  6 21:10:13 CET 2013
 	Enable use of "MHD_create_response_from_callback" with
-	body size of zeor. -CG
+	body size of zero. -CG
 
 Tue Dec 25 16:16:30 CET 2012
 	Releasing libmicrohttpd 0.9.24. -CG
